--- a/midterm/bibs/output.bib
+++ b/midterm/bibs/output.bib
@@ -1,4 +1,4 @@
-@inproceedings{DBLP:conf/kes/KolaczekPJGKN05,
+@inproceedings{1,
     author = {Grzegorz Kolaczek and
  Agnieszka Pieczynska{-}Kuchtiak and
  Krzysztof Juszczyszyn and
@@ -22,9 +22,9 @@
     timestamp = {Tue, 29 Dec 2020 18:37:01 +0100},
     biburl = {https://dblp.org/rec/conf/kes/KolaczekPJGKN05.bib},
     bibsource = {dblp computer science bibliography, https://dblp.org}
-}
+} 
 
-@inproceedings{DBLP:conf/missi/PietranikN12,
+@inproceedings{2,
     author = {Marcin Pietranik and
  Ngoc Thanh Nguyen},
     editor = {Aleksander Zgrzywa and
@@ -46,7 +46,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@book{DBLP:series/aikp/Nguyen08,
+@book{3,
     author = {Ngoc Thanh Nguyen},
     title = {Advanced Methods for Inconsistent Knowledge Management},
     series = {Advanced Information and Knowledge Processing},
@@ -60,7 +60,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/aciids/QinMHZ11a,
+@inproceedings{4,
     author = {Hongwu Qin and
  Xiuqin Ma and
  Tutut Herawan and
@@ -84,7 +84,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/ijcai/PotykaT15,
+@inproceedings{5,
     author = {Nico Potyka and
  Matthias Thimm},
     editor = {Qiang Yang and
@@ -103,7 +103,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/kse/NguyenT17,
+@inproceedings{6,
     author = {Van Tham Nguyen and
  Trong Hieu Tran},
     editor = {Thanh Thuy Nguyen and
@@ -124,7 +124,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/ecai/PotykaT14,
+@inproceedings{7,
     author = {Nico Potyka and
  Matthias Thimm},
     editor = {Torsten Schaub and
@@ -146,7 +146,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@phdthesis{DBLP:phd/dnb/Potyka16,
+@phdthesis{8,
     author = {Nico Potyka},
     title = {Solving Reasoning Problems for Probabilistic Conditional Logics with
  Consistent and Inconsistent Information},
@@ -159,7 +159,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/aciids/NguyenT18,
+@inproceedings{9,
     author = {Van Tham Nguyen and
  Trong Hieu Tran},
     editor = {Ngoc Thanh Nguyen and
@@ -184,7 +184,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/cas/NguyenNTN18,
+@article{10,
     author = {Van Tham Nguyen and
  Ngoc Thanh Nguyen and
  Trong Hieu Tran and
@@ -202,7 +202,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/jphil/KoniecznyP11,
+@article{11,
     author = {S{\'{e}}bastien Konieczny and
  Ram{\'{o}}n Pino P{\'{e}}rez},
     title = {Logic Based Merging},
@@ -218,7 +218,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/ai/KoniecznyM04,
+@article{12,
     author = {S{\'{e}}bastien Konieczny and
  J{\'{e}}r{\^{o}}me Lang and
  Pierre Marquis},
@@ -235,7 +235,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/ai/EveraereKM10,
+@article{13,
     author = {Patricia Everaere and
  S{\'{e}}bastien Konieczny and
  Pierre Marquis},
@@ -252,7 +252,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/kr/QiLG04,
+@inproceedings{14,
     author = {Guilin Qi and
  Weiru Liu and
  David H. Glass},
@@ -273,7 +273,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/uai/QiLB05,
+@inproceedings{15,
     author = {Guilin Qi and
  Weiru Liu and
  David A. Bell},
@@ -289,7 +289,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/amai/QiLGB06,
+@article{16,
     author = {Guilin Qi and
  Weiru Liu and
  David H. Glass and
@@ -308,7 +308,7 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-1203-3508,
+@article{17,
     author = {Guilin Qi and
  Jianfeng Du and
  Weiru Liu and
@@ -325,14 +325,14 @@
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@phdthesis{Vomlel99methodsof,
+@phdthesis{18,
 author = {Jiri Vomlel},
 title = {Methods Of Probabilistic Knowledge Integration},
 year = {1999}
 school={Czech Technical University, Prague}
 }
 
-@article{DBLP:journals/jancl/Vomlel04,
+@article{19,
 author = {Jir{\'{\i}} Vomlel},
 title = {Integrating Inconsistent Data in a Probabilistic Model},
 journal = {J. Appl. Non Class. Logics},
@@ -347,7 +347,7 @@ biburl = {https://dblp.org/rec/journals/jancl/Vomlel04.bib},
 bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/ictai/ZhangPW08,
+@inproceedings{20,
 author = {Shenyong Zhang and
  Yun Peng and
  Xiaopu Wang},
@@ -364,14 +364,14 @@ biburl = {https://dblp.org/rec/conf/ictai/ZhangPW08.bib},
 bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{wilmers2010social,
+@article{21,
 title ={The social entropy process: axiomatising the aggregation of probabilistic beliefs},
 author ={Wilmers, George},
 year ={2010},
 publisher ={Manchester Institute for Mathematical Sciences, University of Manchester}
 }
 
-@article{DBLP:journals/kybernetika/AdamcikW14,
+@article{22,
 author = {Martin Adamc{\'{\i}}k and
                George Wilmers},
 title = {The irrelevant information principle for collective probabilistic
@@ -388,14 +388,14 @@ biburl = {https://dblp.org/rec/journals/kybernetika/AdamcikW14.bib},
 bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@phdthesis{adamcik2014collective,
+@phdthesis{23,
 title ={Collective reasoning under uncertainty and inconsistency},
 author ={Adamcik, Martin},
 year ={2014},
 school ={Manchester Institute for Mathematical Sciences, The University of Manchester}
 }
 
-@inproceedings{DBLP:conf/iccci/NguyenNT18,
+@inproceedings{24,
 author = {Van Tham Nguyen and
  Ngoc Thanh Nguyen and
  Trong Hieu Tran},
@@ -419,7 +419,7 @@ biburl = {https://dblp.org/rec/conf/iccci/NguyenNT18.bib},
 bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@book{bertsekas2006convex,
+@book{25,
 title ={Convex analysis and optimization},
 author ={Bertsekas, Dimitri P and
 		 N.A. and
@@ -428,7 +428,7 @@ year ={2003},
 publisher ={Athena Scientific, Belmont, Massachusetts}
 }
 
-@article{DBLP:journals/geb/OshersonV06,
+@article{26,
 author = {Daniel N. Osherson and
  Moshe Y. Vardi},
 title = {Aggregating disparate estimates of chance},
@@ -445,7 +445,7 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
-@book{ronald2012probability,
+@book{27,
 title ={Probability & Statistics for Engineers & Scientists},
 author ={W.E. Ronald, et al},
 publisher ={Prentice Hall},
@@ -453,7 +453,7 @@ year ={2012}
 }
 
 
-@book{DBLP:books/daglib/0016926,
+@book{28,
 author = {Bernd G{\"{a}}rtner and
                Jir{\'{\i}} Matousek},
 title = {Understanding and using linear programming},
@@ -466,7 +466,7 @@ biburl = {https://dblp.org/rec/books/daglib/0016926.bib},
 bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@incollection{stephen2004convex,
+@incollection{29,
 title ={Convex optimization},
 author ={Stephen, Boyd and Lieven, Vandenberghe},
 booktitle ={Cambridge university press},
