--- a/midterm/Output.tex
+++ b/midterm/Output.tex
@@ -36,8 +36,6 @@
 
 \graphicspath{ {./images/} }
 
-\bibliographystyle{acl_natbib}
-
 \begin{document}
 
   \begin{frontmatter}
@@ -1036,7 +1034,6 @@
 
   This work has been supported by Vietnam National University, Hanoi (VNU), under Project No. QG.19.23. The authors would like to thank Professor Quang Thuy Ha and Knowledge Technology and Data Science Lab, Faculty of Information Technology, VNU - University of Engineering and Technology for expertise support.
 
-\typeout{}
-  \bibliography{output}
+  \bibliography{Output}
 
 \end{document}
