Correct the bib file !!! Make sure TexMaker setup without build folder

--- a/midterm/Output.bib
+++ b/midterm/Output.bib
@@ -240,7 +240,7 @@
 @phdthesis{18,
     author 		= {Jiri Vomlel},
     title 		= {Methods Of Probabilistic Knowledge Integration},
-    year 		= {1999}
+    year 		= {1999},
     school		= {Czech Technical University, Prague}
 }
 @article{19,
@@ -333,7 +333,7 @@ biburl       = {https://dblp.org/rec/journals/geb/OshersonV06.bib},
 bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 @book{27,
-title        = {Probability & Statistics for Engineers & Scientists},
+title        = {Probability and Statistics for Engineers and Scientists},
 author       = {W.E. Ronald, et al},
 year         = 2012,
 publisher    = {Prentice Hall}
