--- a/midterm/Output.tex
+++ b/midterm/Output.tex
@@ -8,8 +8,6 @@
 \usepackage[switch]{lineno}
 \usepackage[none]{hyphenat}
 \usepackage{microtype}
-% \usepackage[style=apa,backend=biber,bibencoding=latin1]{biblatex}
-% \addbibresource{output.bib}
 
 \renewcommand{\algorithmicrequire}{Input:}
 \renewcommand{\algorithmicensure}{Output:}
@@ -155,7 +153,7 @@
   operators fulfill several desirable properties, two new operators is investigated more and unproven remaining
   statements have also been made. Finally, a simple but explanatory example to illustrate, analyze and evaluate
   computational complexity of proposed algorithms is presented.
-
+  
   The rest of this paper is organized as follows. The second section presents the related work on approaches for
   merging PKBs. Some basic notions about probability function, probabilistic constraint, probability rules, the
   representation of knowledge bases in a probabilistic framework, and a PKB profile for such bases are presented in
@@ -1033,6 +1031,8 @@
   \section*{Acknowledgment}
 
   This work has been supported by Vietnam National University, Hanoi (VNU), under Project No. QG.19.23. The authors would like to thank Professor Quang Thuy Ha and Knowledge Technology and Data Science Lab, Faculty of Information Technology, VNU - University of Engineering and Technology for expertise support.
+  
+  \bibliographystyle{abbrv}
 
   \bibliography{Output}
 
